# EddySeek

./: .gitignore  Makefile  README.md  example.cfg  example_indx.cfg  example_minimal.cfg  generate_docs.py  install.py  install.sh  pyproject.toml  pyrightconfig.json
.githooks/: pre-commit
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  troubleshooting.yml
.github/workflows/: ci.yml
docs/: CALIBRATION_PROCESS.md  USER_GUIDE.md
src/: eddy_seek.py
src/_eddy_seek/: __init__.py  accuracy_compare.py  accuracy_stats.py  accuracy_test.py  common.py  config.py  continuous_motion.py  harmonic.py  kconsole.py  motion_guard.py  motion_handler.py  optimizer.py  plot_announce.py  printer_handler.py  records.py  repeated_seek.py  sensor_z.py  session.py  strategy.py  tool_align.py  tools.py
src/_eddy_seek/accuracy/: compare.py  stats.py
src/_eddy_seek/movement/: gcode_offset.py  gcode_state.py  guard.py  handler.py  kinematic_guard.py  leg_planner.py  paths.py  sweep.py  types.py
src/_eddy_seek/plotting/: __init__.py  _plotly.py  accuracy.py  accuracy_io.py  artifacts.py  centroid.py  circle_harmonic.py  debug_scan.py  debug_scan_analysis.py  one_shot.py  primitives.py  recorder.py  registry.py  renderer.py  sweep_centroid.py  ternary.py
src/_eddy_seek/strategy/: __init__.py  base.py  centroid.py  circle_harmonic.py  circle_harmonic_plotter.py  debug_scan.py  one_shot.py  sweep_centroid.py  ternary.py
src/_eddy_seek/strategy/circle_harmonic/: __init__.py  bootstrap.py  circle_pass.py  plateau.py  strategy.py
src/_eddy_seek/strategy/sweep/: __init__.py  axis.py  grid.py  motion.py
src/eddy_seek/: __init__.py  common.py  config.py  docs_ref.py  find_sensor.py  gcode_commands.py  host.py  kconsole.py  optimizer.py  session.py  tool_align.py
src/eddy_seek/accuracy/: __init__.py  test.py
src/eddy_seek/movement/: __init__.py  gcode_state.py  guard.py  handler.py  kinematic_guard.py  profiles.py  sweep.py
src/eddy_seek/plotting/: __init__.py  _plotly.py  accuracy_io.py  debug_scan_analysis.py  primitives.py  registry.py  renderer.py
src/eddy_seek/strategy/: base.py  debug_scan.py  sweep_centroid.py
src/eddy_seek/tools/: README.md  __init__.py  bootstrap.py  diy.py  generic.py  indx.py  protocol.py  registry.py  types.py
tests/: conftest.py  fakes.py  test_accuracy.py  test_config.py  test_console.py  test_debug_scan.py  test_deploy_imports.py  test_docs_sync.py  test_find_sensor.py  test_gcode_state.py  test_harmonic.py  test_install.py  test_motion_guard.py  test_one_shot.py  test_paths.py  test_plotting.py  test_primitives.py  test_relpos.py  test_repeated_seek.py  test_sensor.py  test_sensor_z.py  test_str_enum.py  test_strategy.py  test_sweep.py  test_tool_align.py  test_toolchangers.py  test_trace.py
typings/klippy/: gcode.pyi  klippy.pyi  toolhead.pyi
typings/klippy/extras/: configfile.pyi  gcode_move.pyi  ldc1612.pyi
