[project]
name = "EddySeek"
version = "0.1.1"
description = "Klipper extra for toolchanger nozzle alignment via LDC1612 eddy current sensor"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
debug = ["plotly>=5.0"]

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"
module-name = "_eddy_seek"

[tool.pyright]
include = ["src", "tests"]
stubPath = "typings"
venvPath = "."
venv = ".venv"
extraPaths = ["src"]
pythonVersion = "3.10"
reportMissingTypeStubs = "information"
reportMissingModuleSource = "none"

[[tool.pyright.executionEnvironments]]
root = "src"
extraPaths = ["typings"]

[[tool.pyright.executionEnvironments]]
root = "tests"
extraPaths = ["src", "typings"]

[dependency-groups]
dev = [
    "plotly>=6.8.0",
    "pyright>=1.1.411",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
    "vulture>=2.16",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
exclude = ["typings"]

[tool.ruff.lint]
select = [
"UP030", "UP031", "UP032", "F", "I", "UP",
"RUF","PTH","B","FIX","ISC","LOG", "SIM",
"PERF","FURB","C901","TD","RET","C4",
"ERA001", "RUF104"
]
ignore = ["RUF001", "B008","B905"]
