[project]
name = "EddySeek"
version = "0.2.0"
description = "Klipper extra for toolchanger nozzle alignment via LDC1612 eddy current sensor"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
debug = ["plotly>=5.0"]

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"
module-name = "eddy_seek"

[tool.ty.environment]
extra-paths = ["src"]
python-version = "3.10"

[tool.ty.src]
include = ["src", "tests"]

[tool.ty.analysis]
allowed-unresolved-imports = ["kaleido"]

[[tool.ty.overrides]]
include = ["src/eddy_seek/host.py"]

[tool.ty.overrides.rules]
unresolved-import = "ignore"

[dependency-groups]
dev = [
    "klippy-stubs>=0.3.0",
    "plotly>=6.8.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
    "ty>=0.0.56",
    "vulture>=2.16",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff.lint]
select = [
"UP030", "UP031", "UP032", "F", "I", "UP",
"RUF","PTH","B","FIX","ISC","LOG", "SIM",
"PERF","FURB","C901","TD","RET","C4",
"ERA001", "RUF104"
]
ignore = ["RUF001", "B008","B905"]
